asset building fixings

--- a/assets/locales/en/translation.json
+++ b/assets/locales/en/translation.json
@@ -1,44 +1,3 @@
 {
-  "play": "PLAY",
-  "user_id": "User ID {{0}}",
-  "preload_loading": "Loading...",
-  "preload_connect": "Connecting...",
-  "lobby_navigation_title_bonus": "BONUS",
-  "lobby_navigation_title_game": "GAME",
-  "lobby_navigation_title_league": "LEAGUE",
-  "store_tab_free": "FREE",
-  "store_title_gold": "Get More Gold",
-  "store_title_crystal": "Get More Cystals",
-  "store_title_free": "Get For Free",
-  "store_section_subtitle_small": "SMALL",
-  "store_section_subtitle_medium": "MEDIUM",
-  "store_section_subtitle_large": "LARGE",
-  "store_invite_button": "Invite",
-  "store_watch_button": "Watch",
-  "gameplay_action_button_pass": "PASS",
-  "gameplay_action_button_take": "TAKE",
-  "settings_popup_title": "SETTINGS",
-  "settings_popup_sound_effects": "Sound effects",
-  "settings_popup_music": "Music",
-  "settings_popup_vibrate": "Vibrate on move",
-  "settings_popup_messages": "Messages",
-  "settings_popup_language": "Language",
-  "settings_popup_language_en": "English",
-  "settings_popup_language_ru": "Russian",
-  "new_game_popup_title": "NEW GAME",
-  "new_game_popup_subtitle": "New game\nstarts in",
-  "new_game_popup_cancel_button": "CANCEL",
-  "exit_confirmation_popup_text": "Are you sure you\nwant to exit the game?",
-  "exit_confiramtion_popup_negative_button": "YES",
-  "exit_confiramtion_popup_positive_button": "NO",
-  "modes_view_small_game": "SMALL GAME",
-  "modes_view_medium_game": "MEDIUM GAME",
-  "modes_view_big_game": "BIG GAME",
-  "get-reward-popup-button": "Get",
-  "get-reward-title-wheel": "Get Wheel Bonus",
-  "not-enough-popup-title-gold": "Not enough Gold",
-  "not-enough-popup-title-silver": "Not enough Silver",
-  "not-enough-popup-title-crystals": "Not enough Crystals",
-  "not-enough-popup-earn-button": "Earn",
-  "not-enough-popup-buy-button": "Buy"
+  "play": "PLAY"
 }
