--- a/assets/locales/ru/translation.json
+++ b/assets/locales/ru/translation.json
@@ -1,34 +1,3 @@
 {
-  "play": "Играть",
-  "user_id": "Польз. № {{0}}",
-  "preload_loading": "Загрузка...",
-  "preload_connect": "Подключение...",
-  "lobby_navigation_title_bonus": "БОНУС",
-  "lobby_navigation_title_game": "ИГРА",
-  "lobby_navigation_title_league": "ЛИГА",
-  "store_tab_free": "FREE",
-  "store_title_gold": "Получи Больше Золота",
-  "store_title_crystal": "Получи Больше Кристалов",
-  "store_title_free": "Получи бесплатно",
-  "store_section_subtitle_small": "МАЛЫЙ",
-  "store_section_subtitle_medium": "СРЕДНИЙ",
-  "store_section_subtitle_large": "БОЛЬШОЙ",
-  "store_watch_button": "Смотреть",
-  "gameplay_action_button_pass": "ПАСС",
-  "gameplay_action_button_take": "БЕРУ",
-  "settings_popup_title": "НАСТРОЙКИ",
-  "settings_popup_sound_effects": "Звук. Эффекты",
-  "settings_popup_music": "Музыка",
-  "settings_popup_vibrate": "Вибрация",
-  "settings_popup_messages": "Сообщения",
-  "settings_popup_language": "Язык",
-  "new_game_popup_title": "НОВАЯ ИГРА",
-  "new_game_popup_subtitle": "Новая игра\nначнеться черзе",
-  "new_game_popup_cancel_button": "ОТМЕНА",
-  "exit_confirmation_popup_text": "Вы уверены, что\nхотите выйти?",
-  "exit_confiramtion_popup_negative_button": "ДА",
-  "exit_confiramtion_popup_positive_button": "НЕТ",
-  "modes_view_small_game": "SMALL GAME",
-  "modes_view_medium_game": "MEDIUM GAME",
-  "modes_view_big_game": "BIG GAME"
+  "play": "Играть"
 }
